--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ import '../styles/shared.css';
     <meta name="generator" content={Astro.generator} />
     
     <!-- SEO Mejorado -->
-    <title>Javier Arroyo - Software Developer | Portfolio</title>
+    <title>Javier_cr | Portfolio</title>
     <meta name="description" content="Software Developer specializing in modern web technologies. View my portfolio of projects and skills." />
     <meta name="keywords" content="software developer, web developer, portfolio, JavaScript, TypeScript, React, Node.js" />
     
