--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -146,7 +146,7 @@ import Layout from '../layouts/Layout.astro';
 										<svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
 											<path d="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z"/>
 										</svg>
-										<span>Descargar PDF</span>
+										<span>Download PDF</span>
 									</div>
 								</div>
 							</a>
